<resources>
    <string name="app_name">CECENET</string>
    <string name="URL" translatable="false">http://192.168.100.100/Cecenet/db/</string>
    <string name="URL_Background" translatable="false">http://192.168.100.100/Cecenet/images/background/</string>
    <string name="URL_Pengumuman" translatable="false">http://192.168.100.100/Cecenet/images/pengumuman/</string>
    <string name="close">TUTUP</string>
    <string name="open">Buka</string>
    <string name="cek_wifi">Perangkat Ini tidak terhubung dengan Raspberry</string>
    <string name="petunjuk">Hubungkan Perangkat ini dengan Wi-Fi Raspberry Lalu tekan tombol di bawah untuk mencoba lagi !</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="Tidak_ada_Koneksi_Wi_Fi">Tidak ada Koneksi Wi-Fi</string>
    <string name="Tidak_Ada_Koneksi_dari_Manapun">Tidak Ada Koneksi dari Manapun</string>
    <string name="Tidak_Terhubung_dengan_Wi_Fi_Raspberry">Tidak Terhubung dengan Wi-Fi Raspberry</string>
    <string name="Tekan_Sekali_Lagi_untuk_Keluar">Tekan Sekali Lagi untuk Keluar</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="LOGIN_CECENET">LOGIN CECENET</string>
    <string name="Gagal_Terhubung_dengan_Raspberry">Gagal Terhubung dengan Raspberry</string>
    <string name="Gagal_Menghubungkan_ke_Server">Gagal Menghubungkan ke Server</string>
    <string name="Tuhubung_Raspberry">Tuhubung</string>
    <string name="Terhubung_dengan_Raspberry">Terhubung dengan Raspberry</string>
    <string name="Berhasil_Menghubungkan_ke_Server_Raspberry">Berhasil Menghubungkan ke Server Raspberry</string>
    <string name="Password_Salah_">Password Salah !</string>
    <string name="Jangan_Kosong_">Jangan Kosong !</string>
    <string name="Password_Terlalu_Pendek">Password Terlalu Pendek !</string>
    <string name="Tunggu_Sebentar_">Tunggu Sebentar&#8230;</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_umum">Pengaturan Umum</string>
    <string name="pengaturan_privasi">Pengaturan Privasi</string>
    <string name="pengaturan_wi_fi">Pengaturan Wi-Fi</string>
    <string name="lanjutan">Lanjutan</string>
    <string name="segarkan">Segarkan</string>
    <string name="mulai_ulang">Mulai Ulang</string>
    <string name="matikan">Matikan</string>
    <string name="keluar">Keluar</string>
    <string name="menu_home">MENU HOME</string>
    <string name="template">TEMPLATE</string>
    <string name="identitas">IDENTITAS</string>
    <string name="background">BACKGROUND</string>
    <string name="informasi">INFORMASI</string>
    <string name="kota_daerah">KOTA/DAERAH</string>
    <string name="menu_menuju_adzan">MENU MENUJU ADZAN</string>
    <string name="warna">WARNA</string>
    <string name="suara">SUARA</string>
    <string name="menu_bedug">MENU BEDUG</string>
    <string name="menu_adzan">MENU ADZAN</string>
    <string name="menu_doa_adzan">MENU DOA ADZAN</string>
    <string name="menu_menuju_iqomah">MENU MENUJU IQOMAH</string>
    <string name="durasi">DURASI</string>
    <string name="menu_iqomah">MENU IQOMAH</string>
    <string name="menu_waktu_salat">MENU WAKTU SALAT</string>
    <string name="Memuat_Data">Memuat Data&#8230;</string>
    <string name="pengumuman">PENGUMUMAN</string>
    <string name="atur_tampilan">ATUR TAMPILAN</string>
    <string name="atur_countdown">ATUR COUNTDOWN</string>
    <string name="tampilan">TAMPILAN</string>
    <string name="countdown">COUNTDOWN</string>
    <string name="info_salat">INFO SALAT</string>
    <string name="PENGATURAN_UMUM">PENGATURAN UMUM</string>
    <string name="PENGATURAN_PRIVASI">PENGATURAN PRIVASI</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="klik_untuk_mengubah_password">Klik untuk Mengubah Password</string>
    <string name="input_password_lama_dahulu">Input Password Lama Dahulu</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_baru_ulangi">Password Baru Ulangi</string>
    <string name="perubahan_tanpa_perlu_disegarkan_atau_refresh_ingat_baik_baik_password_yang_telah_diubah">Perubahan Tanpa Perlu disegarkan atau Refresh, Ingat Baik-baik Password yang Telah Diubah.</string>
    <string name="simpan">SIMPAN</string>
    <string name="batal">BATAL</string>
    <string name="Nama_Pengguna_Telalu_Singkat_">Nama Pengguna Telalu Singkat !</string>
    <string name="Telalu_Pendek_Minimal_6_Angka">Telalu Pendek, Minimal 6 Angka</string>
    <string name="Password_Tidak_Sama_">Password Tidak Sama !</string>
    <string name="Menyimpan_Data">Menyimpan Data&#8230;</string>
    <string name="LANJUT">LANJUT</string>
    <string name="SIMPAN">SIMPAN</string>
    <string name="Tidak_Ada_Perubahan_yang_Disimpan">Tidak Ada Perubahan yang Disimpan</string>
    <string name="Berhasil_Menyimpan_Perubahan">Berhasil Menyimpan Perubahan</string>
    <string name="PENGATURAN_Wi_Fi">PENGATURAN Wi-Fi</string>
    <string name="otomatis_dicadangkan_pada_penyimpanan_telepon">Otomatis dicadangkan pada penyimpanan telepon !</string>
    <string name="nama_wi_fi_ssid">Nama Wi-Fi (SSID)</string>
    <string name="password_wi_fi">Password Wi-Fi</string>
    <string name="jika_ingin_mengetahui_perubahan_setelah_disimpan_silahkan_muat_ulang_atau_restart_raspberry_pi">Jika Ingin Mengetahui Perubahan, Setelah disimpan silahkan Muat Ulang atau Restart Raspberry Pi.</string>
    <string name="Minimal_5_Karakter_">Minimal 5 Karakter !</string>
    <string name="Minimal_8_Karakter_">Minimal 8 Karakter !</string>
    <string name="Setting_Wifi">Setting-Wifi</string>
    <string name="Berhasil_di_Segarkan">Berhasil di Segarkan</string>
    <string name="Konfirmasi">Konfirmasi</string>
    <string name="Apakah_Yakin_Ingin_Memulai_Ulang_Perangkat_Raspberry_Pi_">Apakah Yakin Ingin Memulai Ulang Perangkat Raspberry Pi ?</string>
    <string name="TIDAK">TIDAK</string>
    <string name="YA">YA</string>
    <string name="Apakah_Yakin_Ingin_Mematikan_Perangkat_Raspberry_Pi_">Apakah Yakin Ingin Mematikan Perangkat Raspberry Pi ?</string>
    <string name="TEMPLATE_HOME">TEMPLATE HOME</string>
    <string name="IDENTITAS_HOME">IDENTITAS HOME</string>
    <string name="BACKGROUND_HOME">BACKGROUND HOME</string>
    <string name="INFORMASI_HOME">INFORMASI HOME</string>
    <string name="KOTA_DAERAH_HOME">KOTA/DAERAH HOME</string>
    <string name="PENGUMUMAN_HOME">PENGUMUMAN HOME</string>
    <string name="TAMPILAN_MENUJU_ADZAN">TAMPILAN MENUJU ADZAN</string>
    <string name="TAMPILAN_BEDUG">TAMPILAN BEDUG</string>
    <string name="TAMPILAN_ADZAN">TAMPILAN ADZAN</string>
    <string name="TAMPILAN_DOA_ADZAN">TAMPILAN DOA ADZAN</string>
    <string name="TAMPILAN_MENUJU_IQOMAH">TAMPILAN MENUJU IQOMAH</string>
    <string name="COUNTDOWN_MENUJU_IQOMAH">COUNTDOWN MENUJU IQOMAH</string>
    <string name="TAMPILAN_IQOMAH">TAMPILAN IQOMAH</string>
    <string name="TAMPILAN_WAKTU_SALAT">TAMPILAN WAKTU SALAT</string>
    <string name="COUNTDOWN_WAKTU_SALAT">COUNTDOWN WAKTU SALAT</string>
    <string name="INFORMASI_WAKTU_SALAT">INFORMASI WAKTU SALAT</string>
    <string name="template_1">TEMPLATE 1</string>
    <string name="template_2">TEMPLATE 2</string>
    <string name="template_3">TEMPLATE 3</string>
    <string name="bagian">BAGIAN</string>
    <string name="tanggal">TANGGAL</string>
    <string name="judul">JUDUL</string>
    <string name="jam">JAM</string>
    <string name="alamat">ALAMAT</string>
    <string name="hitung_mundur">HITUNG MUNDUR</string>
    <string name="jadwal_salat">JADWAL SALAT</string>
    <string name="time_salat">TIME SALAT</string>
    <string name="highlight_salat">HIGHLIGHT SALAT</string>
    <string name="cadangkan">Cadangkan</string>
    <string name="reset">RESET</string>
    <string name="pilih_warna">PILIH WARNA</string>
    <string name="PILIH_WARNA_TANGGAL">PILIH WARNA TANGGAL</string>
    <string name="PILIH_WARNA_JUDUL">PILIH WARNA JUDUL</string>
    <string name="PILIH_WARNA_JAM">PILIH WARNA JAM</string>
    <string name="PILIH_WARNA_ALAMAT">PILIH WARNA ALAMAT</string>
    <string name="PILIH_WARNA_COUNTDOWN">PILIH WARNA COUNTDOWN</string>
    <string name="PILIH_WARNA_JADWAL_SALAT">PILIH WARNA JADWAL SALAT</string>
    <string name="PILIH_WARNA_TIME_SALAT">PILIH WARNA TIME SALAT</string>
    <string name="PILIH_WARNA_INFORMASI">PILIH WARNA INFORMASI</string>
    <string name="PILIH_BACKGROUND_TANGGAL">PILIH BACKGROUND TANGGAL</string>
    <string name="PILIH_BACKGROUND_JUDUL">PILIH BACKGROUND JUDUL</string>
    <string name="PILIH_BACKGROUND_JAM">PILIH BACKGROUND JAM</string>
    <string name="PILIH_BACKGROUND_COUNTDOWN">PILIH BACKGROUND COUNTDOWN</string>
    <string name="PILIH_BACKGROUND_JADWAL_SALAT">PILIH BACKGROUND JADWAL SALAT</string>
    <string name="PILIH_BACKGROUND_TIME_SALAT">PILIH BACKGROUND TIME SALAT</string>
    <string name="PILIH_BACKGROUND_INFORMASI">PILIH BACKGROUND INFORMASI</string>
    <string name="PILIH_WARNA_HIGHLIGHT">PILIH WARNA HIGHLIGHT</string>
    <string name="Apakah_Yakin_Ingin_Mereset">Apakah Yakin Ingin Mereset </string>
    <string name="nama_masjid">Nama Masjid</string>
    <string name="alamat_masjid">Alamat Masjid</string>
    <string name="jika_ingin_mengetahui_perubahan_setelah_disimpan_silahkan_pilih_menu_segarkan_atau_refresh">Jika Ingin Mengetahui Perubahan, Setelah disimpan silahkan Pilih Menu Segarkan atau Refresh.</string>
    <string name="durasi_ganti_detik">Durasi Ganti (Detik)</string>
    <string name="animasi_background">Animasi Background</string>
    <string name="AKTIF">AKTIF</string>
    <string name="ARSIP">ARSIP</string>
    <string name="Durasi_Ganti_Terlalu_Cepat">Durasi Ganti Terlalu Cepat</string>
    <string name="Durasi_Ganti_Terlalu_Lama">Durasi Ganti Terlalu Lama</string>
    <string name="tambah_background">TAMBAH BACKGROUND</string>
    <string name="aktif">Aktif</string>
    <string name="arsip">Arsip</string>
    <string name="Background_Sudah_Ada">Background Sudah Ada</string>
    <string name="Background_Tidak_Ada">Background Tidak Ada</string>
    <string name="nama_animasi_animate">Nama Animasi (Animate)</string>
    <string name="preview">PREVIEW</string>
    <string name="Atur_Animasi">Atur Animasi</string>
    <string name="SATU_BACKGROUND">SATU BACKGROUND</string>
    <string name="BACKGROUND">BACKGROUND</string>
    <string name="hapus">HAPUS</string>
    <string name="Background_di_Arsipkan">Background di Arsipkan</string>
    <string name="Background_di_Aktifkan">Background di Aktifkan</string>
    <string name="Apakah_Yakin_Ingin_Menghapus">Apakah Yakin Ingin Menghapus</string>
    <string name="Background_ini_">Background ini ?</string>
    <string name="Background_Terhapus">Background Terhapus</string>
    <string name="animasi_informasi">Animasi Informasi</string>
    <string name="informasi_singkat">Informasi Singkat</string>
    <string name="tambah_informasi">TAMBAH INFORMASI</string>
    <string name="isi_dengan_informasi_singkat">Isi dengan Informasi Singkat</string>
    <string name="Informasi_Terlalu_Singkat_">Informasi Terlalu Singkat !</string>
    <string name="edit">EDIT</string>
    <string name="SATU_INFORMASI">SATU INFORMASI</string>
    <string name="INFORMASI">INFORMASI</string>
    <string name="EDIT_INFORMASI">EDIT INFORMASI</string>
    <string name="Informasi_di_Arsipkan">Informasi di Arsipkan</string>
    <string name="Informasi_ini_">Informasi Ini ?</string>
    <string name="Informasi_Terhapus">Informasi Terhapus</string>
    <string name="Informasi_di_Aktifkan">Informasi di Aktifkan</string>
    <string name="ATUR">ATUR</string>
    <string name="judul_pengumuman">Judul Pengumuman</string>
    <string name="isi_pengumuman">Isi Pengumuman</string>
    <string name="atur_jam_raspberry">Atur Jam Raspberry</string>
    <string name="samakan_dengan_jam_ponsel">Samakan dengan Jam Ponsel</string>
    <string name="atur_manual">Atur Manual</string>
</resources>