<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/background"
    tools:context=".CekWifiActivity">

    <LinearLayout
        android:id="@+id/boxPetunjuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/rounded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:src="@drawable/cecenet"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/cek_wifi"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/petunjuk"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textSize="15sp"/>

        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnCobaLagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coba_lagi"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:background="@color/button"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </com.andexert.library.RippleView>

    </LinearLayout>

</LinearLayout>