<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/atur_jam_raspberry"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/textColor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/RGAturWaktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/RBPonsel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/samakan_dengan_jam_ponsel"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"/>

                <RadioButton
                    android:id="@+id/RBManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/atur_manual"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/LLWaktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/tanggal"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"/>

                <DatePicker
                    android:id="@+id/DPWaktuRaspberry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:calendarTextColor="@color/colorPrimary"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/jam"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"/>

                <TimePicker
                    android:id="@+id/TPWaktuRaspberry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numbersTextColor="@color/colorPrimary"
                    android:timePickerMode="spinner"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btnBatalAturWaktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/batal"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/btnAturWaktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/ATUR"
                    tools:ignore="ButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>