<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CircleMenuWaktuSalat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/border">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_waktu_salat"
        android:textSize="30sp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:textColor="@color/background"
        android:padding="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingStart="1dp"
        android:paddingEnd="1dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btnMenuTampilanWaktuSalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/tampilan"
            android:background="@color/background"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:onClick="btnMenuTampilanWaktuSalat"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnMenuCountdownWaktuSalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/countdown"
            android:background="@color/background"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:onClick="btnMenuCountdownWaktuSalat"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnMenuInfoWaktuSalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/info_salat"
            android:background="@color/background"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:onClick="btnMenuInfoWaktuSalat"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>
