<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Activated">

    <androidx.cardview.widget.CardView
        android:id="@+id/CVListPengumuman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imgPengumuman"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/BACKGROUND"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txtJudulPengumuman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:text="@string/judul_pengumuman"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/txtIsiPengumuman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/isi_pengumuman"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>